fixes title spacing in the header (#434)

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -33,6 +33,7 @@
     &Icon {
       display: flex;
       align-items: center;
+      margin-left: var(--margin-15);
     }
   }
 
